# Pantheon-OS

./: .env.example  .gitignore  AGENTS.md  AGENT_ENGINEERING_PRINCIPLES.md  AI_LOG.md  APPROVALS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_AUDIT.md  DECISION.md  DEVLIST.md  DEVPLAN.md  EVIDENCE_PACK.md  EXTERNAL_WATCHLIST.md  INSTALL.md  MEMORY.md  MODULES.md  README.md  ROADMAP.md  SKILLS.md  STATUS.md  STATUTS.md  TASK_CONTRACTS.md  alembic.ini  conftest.py  docker-compose.yml  modules.yaml  plugins.yaml  pyproject.toml
.claude/: settings.json
agents/: AGENTS.md  README.md  __init__.py  _base.py  aphrodite_marketer.py  aphrodite_stylist.py  apollon_researcher.py  apollon_validator.py  ares_executor.py  ares_security.py  argos_extractor.py  argos_observer.py  chronos_planner.py  conftest.py  dedale_builder.py  demeter_collector.py  demeter_optimizer.py  dionysos_creative.py  hades_analyst.py  hades_memory.py  hecate_resolver.py  hephaistos_builder.py  hephaistos_validator.py  hestia_memory.py  iris_clarifier.py  iris_communicator.py  metis_editor.py  mnemosyne_memory.py  poseidon_analyst.py  poseidon_distributor.py  promethee_challenger.py  themis_validator.py
ai_logs/: 0000-historical-archive.md  2026-04-29-claude-audit-repository.md  2026-04-29-external-tools-governance.md  2026-05-01-domain-terminology-cleanup.md  2026-05-01-pantheon-next-readme.md  2026-05-01-pre-refactor-architecture-assets.md  2026-05-02-animo-caliber-classification.md  2026-05-02-api-smoke-tests.md  2026-05-02-ci-repair-diagnostic.md  2026-05-02-classify-n8n-email-automation.md  2026-05-02-classify-openconcho-honcho.md  2026-05-02-classify-ragflow-thoth-kontext.md  2026-05-02-external-runtime-options.md  2026-05-02-knowledge-registry-example.md  2026-05-02-knowledge-selection-skill.md  2026-05-02-legacy-wiring-context-export.md  2026-05-02-readme-diagram-embedding.md  2026-05-02-readme-lucid-diagrams.md  2026-05-02-status-roadmap-doctor-sync.md  2026-05-02-symphony-runtime-option.md  2026-05-02-sync-after-knowledge-selection-openconcho.md  2026-05-02-sync-hermes-tools-policy.md  (+36 more)
(+880 files in other folders)
