[project]
name = "pantheon-os"
version = "0.5.0a1"
description = "Multi-agent intelligence platform for professional organizations"
requires-python = ">=3.11"
# Runtime dependencies are the source of truth in `platform/api/requirements.txt`
# (consumed by the Docker build). Keep this list in sync.
dependencies = [
    "fastapi==0.136.0",
    "uvicorn[standard]==0.44.0",
    "python-multipart==0.0.26",
    "sqlalchemy[asyncio]==2.0.49",
    "asyncpg==0.31.0",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "pgvector==0.3.6",
    "python-jose[cryptography]==3.4.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.13.2",
    "pydantic-settings==2.13.1",
    "instructor==1.15.1",
    "openai==2.32.0",
    "httpx==0.28.1",
    "duckduckgo-search==7.3.0",
    "trafilatura==2.0.0",
    "slowapi==0.1.9",
    "pyyaml==6.0.2",
    "python-dotenv==1.2.2",
    "structlog==24.4.0",
    "tenacity==9.1.4",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.14.0",
    "anyio==4.7.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",   # line too long — géré au cas par cas
    "F401",   # imported but unused — certains imports sont pour side-effects
]
exclude = ["alembic/versions/", "legacy/"]

[tool.ruff.lint.per-file-ignores]
# conftest manipulates sys.path before importing modules — required ordering.
"tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["platform/api"]
# importlib mode lets per-agent tests at modules/agents/*/tests/test_agent.py
# coexist without needing __init__.py files (pytest uses unique import paths
# instead of top-level module names).
addopts = "--import-mode=importlib"
